# pygblocks

./: README.md  pyproject.toml
src/itaxotools/pygblocks/: __init__.py  steps.py  types.py
tests/: test_column.py  test_column_analysis.py  test_files.py  test_flank_rejection.py  test_gap_rejection.py  test_length_rejection.py  test_mask_creation.py  test_nonconserved_rejection.py  test_sequence_trimming.py
