[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "itaxotools-pygblocks"
dynamic = ["version"]
description = "Python implementation for Gblocks"
readme = "README.md"
requires-python = ">=3.10.2, <4"
keywords = []
authors = [
    { name = "StefanPatman", email = "stefanpatman91@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "DDevelopment Status :: 1 - Planning",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "itaxotools-taxi2",
    "setuptools-scm",
    "pre-commit",
    "ruff",
    "pytest",
]

[project.urls]
Homepage = "https://itaxotools.org/"
Source = "https://github.com/iTaxoTools/pygblocks"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools_scm]

[tool.ruff]
ignore-init-module-imports = true
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["itaxotools"]
section-order = [
    "future",
    "pyqt",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
pyqt = ["PySide6"]
